--- a/src/components/Dock.css
+++ b/src/components/Dock.css
@@ -1,4 +1,8 @@
-
+.dock-outer {
+  height: auto;
+  gap: 0;
+  z-index: 1000;
+}
 .dock-panel {
   position: relative;
   display: flex;
@@ -12,6 +16,7 @@
   margin: 0 auto;
   box-shadow: 0 4px 6px -1px rgb(14, 62, 255,0.2),
     0 2px 4px -1px rgba(0, 0, 0, 0.06);
+  z-index: 1000;
 }
 
 .dock-item {
@@ -70,6 +75,7 @@
     align-items: center;
     height: auto;
     gap: 0;
+    z-index: 1000;
   }
   .dock-panel {
     flex-direction: row !important;
@@ -91,17 +97,15 @@
     height: auto;
     border-radius: 20px;
     backdrop-filter: blur(12px);
-    background: rgba(20, 20, 20, 0.7);
-    box-shadow: 0 4px 24px rgba(0,0,0,0.2);
     display: flex;
     flex-direction: column;
     align-items: center;
-    z-index: 1000;
   }
   .dock-panel {
     flex-direction: column !important;
     width: 100%;
     height: auto !important;
     align-items: center;
+    z-index: 1000;
   }
 } 
