--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,9 @@
     --input: 214.3 31.8% 91.4%;
     --ring: 221.2 83.2% 53.3%;
     --radius: 0.75rem;
+    --muted2: 210 40% 96.1%;
+    --expo-out: cubic-bezier(0.16, 1, 0.3, 1);
+    --expo-in: cubic-bezier(0.7, 0, 0.84, 0);
   }
  
   .dark {
@@ -85,6 +88,16 @@
   
   section {
     @apply py-12 sm:py-20 md:py-20 lg:py-24 w-full;
+    min-height: 100vh;
+  }
+
+  #hero {
+    position: absolute;
+    top: -17vh;
+    left: 0;
+    right: 0;
+    z-index: 1;
+    width: 100%;
     min-height: 100vh;
   }
 
@@ -248,7 +261,7 @@ h1 {
 
 section {
     margin-top: 8rem;
-    /* height: 100vh; */
+    height: 100vh;
     margin-bottom: 3rem;
     padding-top: 0 !important;
     padding-bottom: 0 !important;
